# hasktorch-examples

./: .gitignore  README.md  cabal.project  cabal.project.freeze  gruHaskell.cabal  haskell_setup.sh  make_cabal_local.sh  out  python_setup.sh  setenv
elman/: CHANGELOG.md  LICENSE  backpropOnTensors.hs  elman.cabal  elmanSkeleton.hs  linearRegression.hs  linearRegressionSkeleton.hs  tensor_backprop.hs
elman/src/: SGD.hs  SGDBP.hs  linearRegression.hs  mseGradientList.hs  mseGradientTensor.hs
fashion-mnist/: fashion-mnist.cabal
fashion-mnist/src/: DataLoader.hs  Main.hs
gruHaskell/: gruHaskell.cabal
gruHaskell/app/: Backprop.hs  GRU.hs  GRUBackprop.hs  Main.hs  ManualDerivatives.hs
gruHaskell/src/: Types.hs
gruPython/: GRUCell.py  GRUCellBasic.py
recurrent_python/: elmanCell.py
