name:                fashion-mnist
version:             0.1.0.0
-- synopsis:
-- description:
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2019 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

executable fashion-mnist
  hs-source-dirs:      src
  main-is:             Main.hs
  Other-Modules:       DataLoader
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base (==4.7 || >4.7) && <5,
                       hasktorch (==0.0.1 || >0.0.1) && <0.0.2,
                       QuickCheck,
                       mnist-idx,
                       vector,
                       dimensions
  default-language:    Haskell2010

