name:                gruHaskell
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/gruHaskell#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2019 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

executable gruHaskell-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  Other-Modules:       GRU
                     , GRUBackprop
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , gruHaskell
                     , vector
                     , hasktorch (==0.0.1 || >0.0.1) && <0.0.2
                     , backprop
                     , dimensions
  default-language:    Haskell2010

test-suite gruHaskell-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , gruHaskell
                     , hasktorch (==0.0.1 || >0.0.1) && <0.0.2
                     , test-framework
                     , test-framework-quickcheck2
                     , QuickCheck
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/gruHaskell
